overflow static options issue

--- a/src/app/components/autocomplete/autocomplete.component.scss
+++ b/src/app/components/autocomplete/autocomplete.component.scss
@@ -7,7 +7,7 @@
   }
 
   .static-templates {
-    position: sticky;
+    position: absolute;
     bottom: 0;
     width: 100%;
     background: #fff;
